# robotx

./: .gitignore
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/robot_msgs/: RobotMsg.h  Twist2DStamped.h
catkin_ws/devel/lib/pkgconfig/: robot_msgs.pc  vehicle_follow.pc
catkin_ws/devel/lib/python2.7/dist-packages/vehicle_follow/: __init__.py
catkin_ws/devel/share/robot_msgs/cmake/: robot_msgs-msg-paths.cmake  robot_msgsConfig.cmake
catkin_ws/devel/share/roseus/ros/robot_msgs/: manifest.l
catkin_ws/devel/share/vehicle_follow/cmake/: vehicle_followConfig.cmake
catkin_ws/src/: detect_object.py
catkin_ws/src/camera/: CMakeLists.txt  package.xml
catkin_ws/src/detect_object/: CMakeLists.txt  package.xml
catkin_ws/src/detect_object/src/: black_cir_item.py  depth_detect_cir.py  depth_hough_cir.py  detect_object.py  figure_detect.py
catkin_ws/src/lib_PlacardDetect/: .cproject  .project  CMakeLists.txt  ContourInfo.cpp  ContourInfo.h  PlacardView.cpp  PlacardView.h  mr-placard-view.cpp  mr-placard-view.h
catkin_ws/src/lib_PlacardDetect/Debug/: PlacardView.d  makefile  subdir.mk
catkin_ws/src/pi_camera/: CMakeLists.txt  package.xml
catkin_ws/src/pi_camera/src/: camera_node_sequence.py  camera_node_sequence_kuo.py  decoder_node.py
catkin_ws/src/robot_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/robot_msgs/msg/: RobotMsg.msg
catkin_ws/src/vehicle_follow/: CMakeLists.txt  package.xml
catkin_ws/src/vehicle_follow/scripts/: follow_apriltags_node.py  object_follow_node.py
(+14 files in other folders)
